PT-2148: Improvements for the project/template selection modal

--- a/components/skin/api/src/main/resources/ApplicationResources.properties
+++ b/components/skin/api/src/main/resources/ApplicationResources.properties
@@ -17,8 +17,7 @@ phenotips.contentTopMenu.familyActionsMenu.deleteAllMembers=Delete family and al
 phenotips.skin.incompatibleBrowserWarning=It appears you are using Internet Explorer version 8 or below. Please install a newer version or a different browser to continue using PhenoTips.
 phenotips.skin.incompatibleBrowserWarning.title=Incompatible Browser
 
-phenotips.chooseProjectTemplate.createButton=Create
-phenotips.chooseProjectTemplate.saveButton=Save
+phenotips.chooseProjectTemplate.okButton=OK
 phenotips.chooseProjectTemplate.cancelButton=Cancel
 phenotips.chooseProjectTemplate.failure.noResponse=Server not responding
 phenotips.chooseProjectTemplate.failureMessage=Failed to retrieve the list of available configurations.
