--- a/components/export/api/src/main/resources/ApplicationResources.properties
+++ b/components/export/api/src/main/resources/ApplicationResources.properties
@@ -21,6 +21,10 @@ phenotips.exportPreferences.field.variantsInheritance=Variant inheritance
 phenotips.exportPreferences.field.variantsEvidence=Variant evidence
 phenotips.exportPreferences.field.variantsSanger=Variant sanger validation
 phenotips.exportPreferences.field.variantsSegregation=Variant segregation studies
+phenotips.exportPreferences.field.variantsChromosome=Variant Chromosome
+phenotips.exportPreferences.field.variantsStartPosition=Variant start position
+phenotips.exportPreferences.field.variantsEndPosition=Variant end position
+phenotips.exportPreferences.field.variantsReferenceGenome=Variant reference genome
 phenotips.exportPreferences.field.ID=(ontology term ID)
 phenotips.exportPreferences.field.IDandName=(ontology term ID and term name)
 phenotips.exportPreferences.field.termAndMetaID=(ontology term and metadata IDs)
