--- a/components/patient-data/impl/src/main/resources/ApplicationResources.properties
+++ b/components/patient-data/impl/src/main/resources/ApplicationResources.properties
@@ -331,6 +331,10 @@ PhenoTips.GeneVariantClass.variantTable.newEntry=Add variant
 PhenoTips.GeneVariantClass.collapse=Hide variants
 PhenoTips.GeneVariantClass.expand=Show variants
 PhenoTips.GeneVariantClass.variantAlreadyExist=This variant has already been entered.
+PhenoTips.GeneVariantClass.chromosome=Chromosome
+PhenoTips.GeneVariantClass.start_position=Start position
+PhenoTips.GeneVariantClass.end_position=End position
+PhenoTips.GeneVariantClass.reference_genome=Reference genome
 
 phenotips.vcf.title=VCF file upload
 phenotips.vcf.sheetTitle=Exome sequencing data
